# hello_open_gl

./: .gitignore  CMakeLists.txt  README.md
src/: main.c  main.cpp
